--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -2,14 +2,9 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="css/feed/style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" />
   <!-- Google web font "Open Sans" -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <!-- Bootstrap style -->
-  <link rel="stylesheet" href="css/magnific-popup.css" />
-  <!-- Magnific pop up style, http://dimsemenov.com/plugins/magnific-popup/ -->
-  <link rel="stylesheet" href="css/templatemo-style.css" />
+
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,9 +13,13 @@
   <meta name="keywords" content="keywords,here" />
   <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../public/css/feed/style.css" />
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+
+  <link rel="stylesheet" href="css/feed/style.css" />
+  <!-- <link rel="stylesheet" href="../public/css/feed/style.css" /> -->
+
   <title>Document</title>
 </head>
 
