--- a/views/addQuote.ejs
+++ b/views/addQuote.ejs
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/posts/style.css" />
+    
     <title>Quotes</title>
+    
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+
+      <!-- Tailwind CSS -->
+  <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet" />
+
+    <!-- Public CSS -->
+    <link rel="stylesheet" href="/css/posts/style.css" />
+
   </head>
   <body>
     <!-- Renders a single Post -->
@@ -34,6 +44,6 @@
         </ul>
       </section>
     </section>
-    z
+    
   </body>
 </html>
