created partials - nav bar in progress

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -28,21 +28,8 @@
 </head>
 <body>
      <!--Sidebar-->
-    <section class="sidebar">
-      <i class="fas fa-arrow-circle-up"></i>
-      <a href="/feed">Back to Feed</a>
-      <i class="fas fa-link"></i>
-      <a href="/profile">Submit Post</a>
-      <i class="fas fa-quote-right"></i>
-      <a href="/quotes/addQuote">Submit Leon Quote</a>
-      <i class="fas fa-magic"></i>
-      <a href="/post/randomPost">Random Post Automagic</a>
-      <i class="fas fa-id-badge"></i>
-      <a href="/profile">Profile</a>
-      <i class="fas fa-sign-out-alt"></i>
-      <a href="/auth/logout">Logout</a>
+    <%- include('partials/main-nav') %>
 
-    </section>
     <main>
     <section class="leon">
         <h1>Learn With Leon's Resources</h1>
