--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -31,29 +31,31 @@
   </head>
   <body>
 
-    <% { %>
     <div class='header'>
-      <h2>This is <%= user.firstName%>'s Profile</h2>
-        <p>This is my bio: <%= user.bio%></p>
-        <section class="profile-pic">
-          <img src='<%= user.image%>'>
-          <h4>Profile Pic</h4> 
-        </section>
+      <section class="profile-pic">
+        <h2><%= user.firstName%>'s Profile</h2>
+        <img class='profile-img' src='<%= user.image%>'>
+      </section>
     </div>
 
     
+    <p>Here are my posts:</p>
     <div class="posts">
-        <p>Here are my posts:</p>
-        <ul class="row list-unstyled">
-            <% for(let i=0; i < post.length; i++) {%>
-                <p> <%= post[i].caption %> </p>
-                <a href="/post/<%= post[i]._id%>">
-                  <img class="img-fluid" src="<%= post[i].image%>">
-                </a>
-            <% } %> 
-    </div>  
-    <% } %>   
-
+        <% for(post of post) {%>
+          <div class='post'>
+            <span class='postCaption'><%= post.caption %></span>
+          <% if(post.image === null) { %> 
+            <div class="flex justify-center">
+              <iframe class="twitch-clip" frameborder="0" src="<%= post.clip %>" height="480" width="720" allowfullscreen="true"></iframe>
+            </div>
+            <% } else{ %>
+            <a href="/post/<%= post._id%>">
+            <img class="object-contain" src="<%= post.image %>" />
+          </a>
+        </div>
+          <% } %> 
+              <% } %> 
+            </div>  
     <!-- Nav Bar -->
     <section>
       <div
@@ -68,7 +70,7 @@
             </a>
           </li>
           <li class="mr-3 flex-1">
-            <a href="/profile"
+            <a href="/post/addPost"
               class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
               <i class="fas fa-link pr-0 md:pr-3"></i><span
                 class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Submit Post</span>
