--- a/public/css/addPost/style.css
+++ b/public/css/addPost/style.css
@@ -51,7 +51,7 @@ input[type='text'] {
 	width: 100%;
 }
 
-button {
+/* button {
 	width: 300px;
 	height: 50px;
 	background: green;
@@ -61,10 +61,11 @@ button {
 	position: relative;
 	display: inline-block;
 	text-align: center;
+	content-align: center;
 	font-size: 2rem;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 	border-radius: 5px;
-}
+} */
 
 /*probably have to change this to work with the feed posts as well*/
 .posts {
