--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -1,51 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Create your own post</title>
+		<title>Create your own post</title>
 
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-    />
+		<!-- Font Awesome -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+			integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+			crossorigin="anonymous"
+		/>
 
-    <!-- Tailwind CSS -->
-    <link
-      href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+		<!-- Tailwind CSS -->
+		<link
+			href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"
+			rel="stylesheet"
+		/>
 
-    <!-- Public CSS -->
-    <!-- Public CSS -->
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/addPost/style.css" />
-    <link rel="stylesheet" href="/css/posts/style.css" />
-  </head>
-  <body>
-    <h3>Add a post!</h3>
-    <div><%= typeof msg != 'undefined' ? msg : '' %></div>
-    <!-- an error message if an unsupported clip is uploaded -->
-    <form action="/post/addPost" enctype="multipart/form-data" method="POST">
-      <div>
-        <label for="content">Got a Pic?</label>
-        <span>Only supports: .jpg, .png, jpeg</span>
-        <input class="content" type="file" name="file" />
-      </div>
-      <div>
-        <label for="caption">Give us a caption:</label>
-        <input type="text" name="caption" placeholder="CLEVER CAPTION" />
-      </div>
-      <div>
-        <label for="clip">Got a Twitch Clip? Paste it here</label>
-        <input type="text" name="clip" placeholder="TWITCH LINK" />
-      </div>
-      <button type="submit">Upload...BOOM!</button>
-    </form>
-  </body>
+		<!-- Public CSS -->
+		<link rel="stylesheet" href="/css/addPost/style.css" />
+	</head>
+
+	<body class="bg-gray-100 font-sans leading-normal tracking-normal">
+		<h1 class="text-7xl font-bold">ADD A POST</h1>
+		<div><%= typeof msg != 'undefined' ? msg : '' %></div>
+		<!-- an error message if an unsupported clip is uploaded -->
+		<form
+			action="/post/addPost"
+			enctype="multipart/form-data"
+			method="POST"
+			class="ml-20 flex flex-col content-center"
+		>
+			<div>
+				<label for="content">Got a Pic?</label>
+				<span> Only supports: .jpg, .png, jpeg,</span>
+				<input class="content" type="file" name="file" />
+			</div>
+			<div>
+				<label for="caption">Give us a Caption</label>
+				<input type="text" name="caption" placeholder="CLEVER CAPTION" />
+			</div>
+			<div class="pb-5">
+				<label for="clip">Got a Twitch Clip? Paste it here</label>
+				<input type="text" name="clip" placeholder="TWITCH LINK" />
+			</div>
+			<button
+				type="submit"
+				class="
+					justify-center
+					w-2/4
+					mx-auto
+					h-auto
+					bg-gray-900
+					text-gray-300
+					p-1
+					relative
+					inline-block
+					text-center
+					shadow-2xl
+					rounded-xl
+					hover:bg-pink-500
+					focus:outline-none
+					focus:ring-3 focus:ring-green-800 focus:ring-opacity-50
+				"
+			>
+				Upload...BOOM!
+			</button>
+		</form>
+
+		<!--Sidebar-->
+		<%- include('partials/main-nav') %>
+	</body>
 </html>
