styled info page

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -27,8 +27,7 @@
 
 </head>
 <body>
-     <!--Sidebar-->
-    <%- include('partials/main-nav') %>
+
 
     <main>
     <section class="leon">
@@ -61,6 +60,8 @@
         </section>
     </section>
   </main>
+  <!--Sidebar-->
+  <%- include('partials/yobee-nav') %>
 
 </body>
 </html>
