--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -25,7 +25,7 @@
     <!-- Public CSS -->
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/addPost/style.css" />
-    <link rel="stylesheet" href="/css/posts/style.css" />
+    <!-- <link rel="stylesheet" href="/css/posts/style.css" /> -->
   </head>
   <body>
     <h3>Add a post!</h3>
