--- a/views/partials/main-nav.ejs
+++ b/views/partials/main-nav.ejs
@@ -1,57 +1,49 @@
-<section>
+<section class='w-full md:w-1/12 xl:w-2/12 2xl:w-48 px-2 md:py-2 fixed bottom-0 md:top-0 md:left-0 bg-gray-900 '>
       <div
-      class="w-auto md:w-1/6 bg-gray-900 md:bg-gray-900 px-2 text-center fixed bottom-0 md:pt-8 md:top-0 md:left-0 h-16 md:h-screen md:border-r-4 md:border-gray-600">
-      <div class="md:relative mx-auto lg:float-right lg:px-6">
-        <ul class="list-reset flex flex-row md:flex-col text-center md:text-left">
-          <!-- <li class="mr-3 flex-1">
-            <a href="#"
-              class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-              <i class="fas fa-arrow-circle-up pr-0 md:pr-3"></i><span
-                class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Top of Page</span>
-            </a>
-          </li> -->
-          <li class="mr-3 flex-1">
-            <a href="/profile"
-              class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-              <i class="fas fa-link pr-0 md:pr-3"></i><span
-                class=" hidden md:block pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Submit Post</span>
-            </a>
-          </li>
-          <!-- <li class="mr-3 flex-1">
-            <a href="/quotes/addQuote"
-              class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-              <i class="fas fa-quote-right pr-0 md:pr-3"></i><span
-                class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Submit Leon Quote</span>
-            </a>
-          </li> -->
-          <li class="mr-3 flex-1">
-            <a href="/post/randomPost"
-              class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-              <i class="fas fa-magic pr-0 md:pr-3"></i><span
-                class=" hidden md:block pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Random Post Automagic</span>
-            </a>
-          </li>
-          <li class="mr-3 flex-1">
+      class="md:h-full text-center inset-x-0 flex flex-row md:flex-column justify-center items-center ">      
+        <ul class="list-reset flex flex-row w-11/12 md:flex-col md:h-3/4 items-center justify-evenly text-center">
+          <li class="mr-3 md:mr-0 flex-1 xl:self-center">
             <a href="/feed"
-              class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-              <i class="fas fa-id-badge pr-0 md:pr-3"></i><span
-                class="hidden md:block pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Home</span>
+              class="block py-1 md:py-3 pl-1 align-middle no-underline border-b-2 border-transparent hover:border-b-2 hover:border-pink-500">
+              <i class="fas fa-id-badge pr-0 text-indigo-200 hover:text-pink-500"></i><span
+                class="hidden xl:inline-block pb-1 md:pb-0 xl:ml-3 text-xs md:text-base text-gray-400 font-semibold ">Home</span>
+            </a>
+          </li> 
+          <li class="mr-3 md:mr-0 flex-1 xl:self-center">
+            <a href="/post/addPost"
+              class="block py-1 md:py-3 pl-1 align-middle no-underline border-b-2 border-transparent hover:border-b-2 hover:border-pink-500">
+              <i class="fas fa-link pr-0 text-indigo-200 hover:text-pink-500  "></i><span
+                class=" hidden xl:inline-block pb-1 md:pb-0 xl:ml-3 text-xs md:text-base text-gray-400 font-semibold ">Submit Post</span>
             </a>
           </li>
-          <li class="mr-3 flex-1">
+          <li class="mr-3 md:mr-0 flex-1 xl:self-center">
+            <a href="/profile"
+              class="block py-1 md:py-3 pl-1 align-middle no-underline border-b-2 border-transparent hover:border-b-2 hover:border-pink-500">
+              <i class="fas fa-magic pr-0 text-indigo-200 hover:text-pink-500"></i><span
+                class=" hidden xl:inline-block pb-1 md:pb-0 xl:ml-3 text-xs md:text-base text-gray-400 font-semibold">Profile</span>
+            </a>
+          </li>
+          <li class="mr-3 md:mr-0 flex-1 xl:self-center">
+            <a href="/post/randomPost"
+              class="block py-1 md:py-3 pl-1 align-middle no-underline border-b-2 border-transparent hover:border-b-2 hover:border-pink-500">
+              <i class="fas fa-magic pr-0 text-indigo-200 hover:text-pink-500"></i><span
+                class=" hidden xl:inline-block pb-1 md:pb-0 xl:ml-3 text-xs md:text-base text-gray-400 font-semibold">Random Post</span>
+            </a>
+          </li>
+          <li class="mr-3 md:mr-0 flex-1 xl:self-center">
             <a href="/info"
-              class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-              <i class="fas fa-code pr-0 md:pr-3"></i><span
-                class="hidden md:block pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">LEARN TO CODE!</span>
+              class="block py-1 md:py-3 pl-1 align-middle no-underline border-b-2 border-transparent hover:border-b-2 hover:border-pink-500">
+              <i class="fas fa-code pr-0 text-indigo-200 hover:text-pink-500"></i><span
+                class="hidden xl:inline-block pb-1 md:pb-0 xl:ml-3 text-xs md:text-base text-gray-400 font-semibold">Learn To Code!</span>
             </a>
           </li>
-          <li class="mr-3 flex-1">
+          <li class="mr-3 md:mr-0 flex-1 xl:self-center">
             <a href="/auth/logout"
-              class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-              <i class="fas fa-sign-out-alt pr-0 md:pr-3"></i><span
-                class="hidden md:block pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Logout</span>
+              class="block py-1 md:py-3 pl-1 align-middle no-underline border-b-2 border-transparent hover:border-b-2 hover:border-pink-500">
+              <i class="fas fa-sign-out-alt pr-0 text-indigo-200 hover:text-pink-500"></i><span
+                class="hidden xl:inline-block pb-1 md:pb-0 xl:ml-3 text-xs md:text-base text-gray-400 font-semibold">Logout</span>
             </a>
           </li>
-        </ul>
+        </ul>       
       </div>
     </section>
